[tool.poetry]
name = "tech-chain"
version = "0.1.0"
description = "Electronics retail network platform (test task)"
authors = ["slavakps <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.2"
djangorestframework = "^3.16"
psycopg2-binary = "^2.9"
django-filter = "^25.2"
python-dotenv = "^1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
    ".idea",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
